Library module was reorganized, small refactoring was performed.

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        flatDir {
+            dirs 'libs'
+            dirs project(':printer').file('libs')
+        }
     }
 }
 
